--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "The Flagbit Table Attribute Bundle for Akeneo PIM gives you the possibility to enrich your product with multi-dimensional data presentation in the form of tables, allowing you maximum flexibility within the PIM.",
   "keywords": ["akeneo", "table", "attribute", "pim", "multidimensional"],
   "type": "library",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
     {
